# argsolveranalyser

./: .gitignore  CMakeLists.txt  README.md  runsolver
benchmarker/: CMakeLists.txt  main.cxx
benchmarker/exts/: Timer.cpp  candidate_sol  makefile  master_sol
common/: CMakeLists.txt
common/inc/: conf.h  graph.h  graphhashset.h  metricset.h  opts.h  parse.h  persistentargs.h  util.h
common/src/: SpookyV2.cpp  conf.cxx  graph.cxx  graphhashset.cxx  metricset.cxx  opts.cxx  parse.cxx  parsetest  persistentargs.cxx  util.cxx
graphAnalyser/: CMakeLists.txt  main.cxx  options.cxx  options.h
graphAnalyser/metrics/: _externalMetric.cxx  metric.h  sccMetrics.cxx  sizeMetric.cxx  sparsenessMetric.cxx
graphMapper/: CMakeLists.txt  main.cxx
reportGenerator/: CMakeLists.txt  main.cxx
reportGenerator/generators/: evolutionGenerator.cxx  generator.h  regressionGenerator.cxx
store/external-metrics/: Filesize.sh
store/graphs/: test.tgf
